[shenker/cloning,cloning] WIP iter_bounds, used in iter_primers.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
@@ -416,7 +416,7 @@
     "part = reg.get(part_name)\n",
     "part_seq = part[\"_seq\"]\n",
     "cds_start, cds_stop = workflow.find_coding_sequence(part_seq)\n",
-    "# part_seq = part_seq[cds_start:cds_stop]\n",
+    "cds_stop -= 3  # want to insert placeholder before stop codon\n",
     "plasmid_name = workflow.get_source_plasmid(reg, part[\"Usage\"])\n",
     "plasmid_seq = reg.get(plasmid_name)[\"_seq\"]\n",
     "part_start, part_stop, _, _ = sequence.find_subsequence(\n",
@@ -432,8 +432,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plasmid_seq_forward = plasmid_seq.reindex(stop)\n",
-    "plasmid_seq_reverse = plasmid_seq.reindex(stop).reverse_complement()"
+    "plasmid_seq_forward = workflow.normalize_seq(plasmid_seq.reindex(stop))\n",
+    "plasmid_seq_reverse = workflow.normalize_seq(\n",
+    "    plasmid_seq.reindex(stop).reverse_complement()\n",
+    ")"
    ]
   },
   {
@@ -442,7 +444,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "degtag_overhangs"
+    "placeholder = tag_prefix + design.golden_gate_placeholder(\n",
+    "    Restriction.BsaI, None, *degtag_overhangs\n",
+    ")"
    ]
   },
   {
@@ -451,16 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "design.golden_gate_placeholder(Restriction.BsaI, None, *degtag_overhangs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "placeholder = None"
+    "placeholder"
    ]
   },
   {
@@ -471,22 +466,30 @@
    "source": [
     "tm_binding = 60\n",
     "tm_homology = 55\n",
+    "min_mfe = None\n",
     "homology = next(\n",
     "    primers.iter_primers(\n",
-    "        sequence.get_seq(plasmid_seq_reverse), min_tm=tm_homology, anchor_3prime=True\n",
+    "        plasmid_seq_forward, min_tm=tm_homology, min_mfe=min_mfe, anchor_3prime=True\n",
     "    )\n",
     ")\n",
     "reverse_primer = next(\n",
     "    primers.iter_primers(\n",
-    "        sequence.get_seq(plasmid_seq_reverse),\n",
+    "        plasmid_seq_forward,\n",
     "        min_tm=tm_binding,\n",
     "        min_length=len(homology),\n",
+    "        min_mfe=min_mfe,\n",
     "        anchor_3prime=True,\n",
     "    )\n",
     ")\n",
+    "reverse_primer_seq = sequence.reverse_complement(reverse_primer.binding)\n",
+    "overhang = homology.binding + placeholder\n",
     "forward_primer = next(\n",
     "    primers.iter_primers(\n",
-    "        sequence.get_seq(plasmid_seq_forward), min_tm=tm_binding, anchor_3prime=True\n",
+    "        plasmid_seq_reverse,\n",
+    "        overhang=overhang,\n",
+    "        min_tm=tm_binding,\n",
+    "        min_mfe=min_mfe,\n",
+    "        anchor_3prime=True,\n",
     "    )\n",
     ")"
    ]
@@ -507,6 +510,15 @@
    "outputs": [],
    "source": [
     "reverse_primer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forward_primer"
    ]
   },
   {
@@ -590,6 +602,46 @@
    "source": [
     "# storage vectors"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iteration test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "length = 5\n",
+    "for start, stop in primers.iter_bounds(\n",
+    "    length, min_length=1, max_length=3, inner_iter=\"start\"\n",
+    "):\n",
+    "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "length = 5\n",
+    "for start, stop in primers.iter_bounds(\n",
+    "    length, min_length=1, max_length=3, inner_iter=\"stop\"\n",
+    "):\n",
+    "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
