--- a/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
@@ -618,7 +618,7 @@
    "source": [
     "length = 5\n",
     "for start, stop in primers.iter_bounds(\n",
-    "    length, min_length=1, max_length=3, inner_iter=\"start\"\n",
+    "    length, min_length=1, max_length=3, outer_iter=\"stop\"\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
@@ -631,7 +631,20 @@
    "source": [
     "length = 5\n",
     "for start, stop in primers.iter_bounds(\n",
-    "    length, min_length=1, max_length=3, inner_iter=\"stop\"\n",
+    "    length, min_length=1, max_length=3, outer_iter=\"start\"\n",
+    "):\n",
+    "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "length = 5\n",
+    "for start, stop in primers.iter_bounds(\n",
+    "    length, min_length=1, max_length=3, outer_iter=\"length\"\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
