[shenker/cloning,cloning] WIP iter_bounds. Now anchor works.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
@@ -616,9 +616,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "anchor = \"start\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "length = 5\n",
     "for start, stop in primers.iter_bounds(\n",
-    "    length, min_length=1, max_length=3, outer_iter=\"stop\"\n",
+    "    length, min_length=1, max_length=3, outer_iter=\"stop\", anchor=anchor\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
@@ -631,7 +640,7 @@
    "source": [
     "length = 5\n",
     "for start, stop in primers.iter_bounds(\n",
-    "    length, min_length=1, max_length=3, outer_iter=\"start\"\n",
+    "    length, min_length=1, max_length=3, outer_iter=\"start\", anchor=anchor\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
@@ -644,17 +653,10 @@
    "source": [
     "length = 5\n",
     "for start, stop in primers.iter_bounds(\n",
-    "    length, min_length=1, max_length=3, outer_iter=\"length\"\n",
+    "    length, min_length=1, max_length=3, outer_iter=\"length\", anchor=anchor\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
