[shenker/cloning,cloning] Forgot to handle anchor=False case.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
@@ -616,7 +616,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anchor = \"start\""
+    "anchor = None  # \"start\""
    ]
   },
   {
@@ -657,6 +657,13 @@
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
