[cloning,shenker/cloning] iter_bounds is done. reverse_inner_iter and reverse_outer_iter work.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
@@ -616,7 +616,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anchor = None  # \"start\""
+    "anchor = None  # \"start\"\n",
+    "reverse_inner_iter = False\n",
+    "reverse_outer_iter = False"
    ]
   },
   {
@@ -627,7 +629,13 @@
    "source": [
     "length = 5\n",
     "for start, stop in primers.iter_bounds(\n",
-    "    length, min_length=1, max_length=3, outer_iter=\"stop\", anchor=anchor\n",
+    "    length,\n",
+    "    min_length=1,\n",
+    "    max_length=3,\n",
+    "    outer_iter=\"start\",\n",
+    "    anchor=anchor,\n",
+    "    reverse_inner_iter=reverse_inner_iter,\n",
+    "    reverse_outer_iter=reverse_outer_iter,\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
@@ -640,7 +648,13 @@
    "source": [
     "length = 5\n",
     "for start, stop in primers.iter_bounds(\n",
-    "    length, min_length=1, max_length=3, outer_iter=\"start\", anchor=anchor\n",
+    "    length,\n",
+    "    min_length=1,\n",
+    "    max_length=3,\n",
+    "    outer_iter=\"stop\",\n",
+    "    anchor=anchor,\n",
+    "    reverse_inner_iter=reverse_inner_iter,\n",
+    "    reverse_outer_iter=reverse_outer_iter,\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
@@ -653,7 +667,13 @@
    "source": [
     "length = 5\n",
     "for start, stop in primers.iter_bounds(\n",
-    "    length, min_length=1, max_length=3, outer_iter=\"length\", anchor=anchor\n",
+    "    length,\n",
+    "    min_length=1,\n",
+    "    max_length=3,\n",
+    "    outer_iter=\"length\",\n",
+    "    anchor=anchor,\n",
+    "    reverse_inner_iter=reverse_inner_iter,\n",
+    "    reverse_outer_iter=reverse_outer_iter,\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
