[cloning,shenker/cloning] Shortened kwargs to outer, reverse_inner, reverse_outer in primers.iter_bounds.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220124 Deg tags.ipynb
@@ -617,8 +617,8 @@
    "outputs": [],
    "source": [
     "anchor = None  # \"start\"\n",
-    "reverse_inner_iter = False\n",
-    "reverse_outer_iter = False"
+    "reverse_inner = True\n",
+    "reverse_outer = False"
    ]
   },
   {
@@ -632,10 +632,10 @@
     "    length,\n",
     "    min_length=1,\n",
     "    max_length=3,\n",
-    "    outer_iter=\"start\",\n",
+    "    outer=\"start\",\n",
     "    anchor=anchor,\n",
-    "    reverse_inner_iter=reverse_inner_iter,\n",
-    "    reverse_outer_iter=reverse_outer_iter,\n",
+    "    reverse_inner=reverse_inner,\n",
+    "    reverse_outer=reverse_outer,\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
@@ -651,10 +651,10 @@
     "    length,\n",
     "    min_length=1,\n",
     "    max_length=3,\n",
-    "    outer_iter=\"stop\",\n",
+    "    outer=\"stop\",\n",
     "    anchor=anchor,\n",
-    "    reverse_inner_iter=reverse_inner_iter,\n",
-    "    reverse_outer_iter=reverse_outer_iter,\n",
+    "    reverse_inner=reverse_inner,\n",
+    "    reverse_outer=reverse_outer,\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
@@ -670,10 +670,10 @@
     "    length,\n",
     "    min_length=1,\n",
     "    max_length=3,\n",
-    "    outer_iter=\"length\",\n",
+    "    outer=\"length\",\n",
     "    anchor=anchor,\n",
-    "    reverse_inner_iter=reverse_inner_iter,\n",
-    "    reverse_outer_iter=reverse_outer_iter,\n",
+    "    reverse_inner=reverse_inner,\n",
+    "    reverse_outer=reverse_outer,\n",
     "):\n",
     "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
    ]
