[cloning,shenker/cloning] Removed parse_id in SheetClient.__setitem__ so that it works with LIB_parts.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220127 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220127 Deg tags.ipynb
@@ -114,6 +114,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib_oligos = reg[(\"oLIB\", \"oligos\")]\n",
+    "olt_oligos = reg[(\"oLT\", \"oligos\")]\n",
+    "plib_plasmids = reg[(\"pLIB\", \"plasmids\")]\n",
+    "plib_maps = reg[(\"pLIB\", \"maps\")]\n",
+    "lib_parts = reg[(\"LIB\", \"parts\")]\n",
+    "part_types = reg[(\"LIB\", \"parts\", \"Part types\")]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -126,43 +140,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plib_plasmids = reg[(\"pLIB\", \"plasmids\")]\n",
-    "plib_maps = reg[(\"pLIB\", \"maps\")]\n",
-    "lib_parts = reg[(\"LIB\", \"parts\")]\n",
-    "part_types = reg[(\"LIB\", \"parts\", \"Part types\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gg_overhangs = workflow.overhangs_for(part_types[\"CDS_CD\"])\n",
-    "degtag_overhangs = workflow.overhangs_for(part_types[\"Deg_tag\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# storage_flanks = (\n",
-    "#     lib_parts[\"JUMP_storage_vector_prefix\"][\"Sequence\"],\n",
-    "#     lib_parts[\"JUMP_storage_vector_suffix\"][\"Sequence\"],\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ua_rbs = \"tctagatttaagaaggagatatacat\"\n",
-    "# cluzel_cterm = \"atgtccagacctgcaggcatgcaagctctagaggcat\"\n",
-    "# flanks = (ua_rbs + \"atg\", \"taa\" + cluzel_cterm)"
+    "tag_part_type = \"ClpXP_tag\"\n",
+    "tag_overhangs = workflow.overhangs_for(part_types[tag_part_type])\n",
+    "library_primer = \"oLIB46\"\n",
+    "enzyme = Restriction.BsaI\n",
+    "num_random_bases = 6  # random bases to add between enzyme binding site and end of DNA\n",
+    "clpx_tag_length = 3  # aa\n",
+    "nnk_length = 6  # aa\n",
+    "nnk_clpx_length = nnk_length + clpx_tag_length  # aa\n",
+    "head_length = 6  # nt\n",
+    "tail_length = clpx_tag_length * 3  # nt"
    ]
   },
   {
@@ -207,6 +194,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tags"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -214,7 +208,7 @@
    "source": [
     "tag_normalized = {name: workflow.normalize_seq(seq) for name, seq in tags_wt.items()}\n",
     "tag_prefixes = {\n",
-    "    name: seq[: seq.find(upstream_overhang)] for name, seq in tag_normalized.items()\n",
+    "    name: seq[: seq.find(tag_overhangs[0])] for name, seq in tag_normalized.items()\n",
     "}\n",
     "tag_prefixes_list = list(tag_prefixes.values())\n",
     "tag_prefix = tag_prefixes_list[0]\n",
@@ -227,9 +221,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tag_suffix = sequence.smoosh_sequences(\n",
-    "    workflow.normalize_seq(\"taa\"), degtag_overhangs[1]\n",
-    ")"
+    "tag_suffix = sequence.smoosh_sequences(workflow.normalize_seq(\"taa\"), tag_overhangs[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head_length_without_prefix = head_length - len(tag_prefix)  # nt\n",
+    "tail_length_with_suffix = tail_length + len(tag_suffix)  # nt"
    ]
   },
   {
@@ -251,24 +253,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Tags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "head_length = 6 - len(tag_prefix)  # nt\n",
-    "tail_length = 9 + len(tag_suffix)  # nt\n",
-    "nnk_length = 6  # aa's"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -280,11 +264,22 @@
     "        \"Sequence\": seq,\n",
     "        \"Description\": f\"Wild-type {name} ClpXP degradation tag from Andersen 1998.\",\n",
     "    }\n",
-    "    assert len(seq) - head_length - tail_length == nnk_length * 3\n",
+    "    assert (\n",
+    "        len(seq) - head_length_without_prefix - tail_length_with_suffix\n",
+    "        == nnk_length * 3\n",
+    "    )\n",
     "    tags[f\"degtag_{name}_NNK\"] = {\n",
-    "        \"Sequence\": seq[:head_length] + \"NNK\" * nnk_length + seq[-tail_length:],\n",
-    "        \"Description\": f\"ClpXP degradation tag library with 2x alanines, 6x NNK's, and the {name} tail from Andersen 1998.\",\n",
-    "    }"
+    "        \"Sequence\": seq[:head_length_without_prefix]\n",
+    "        + \"NNK\" * nnk_length\n",
+    "        + seq[-tail_length_with_suffix:],\n",
+    "        \"Description\": f\"ClpXP degradation tag library with 2x alanines, {nnk_length}x NNK's, and the {name} tail from Andersen 1998.\",\n",
+    "    }\n",
+    "tags[f\"degtag_all_NNK\"] = {\n",
+    "    \"Sequence\": seq[:head_length_without_prefix]\n",
+    "    + \"NNK\" * nnk_clpx_length\n",
+    "    + seq[-(tail_length_with_suffix - clpx_tag_length * 3) :],\n",
+    "    \"Description\": f\"ClpXP degradation tag library with 2x alanines and {nnk_clpx_length}x NNK's.\",\n",
+    "}"
    ]
   },
   {
@@ -302,8 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OLIGOS\n",
-    "# PARTS"
+    "library_primer_seq = workflow.normalize_seq(reg.get(library_primer)[\"Sequence\"])"
    ]
   },
   {
@@ -314,25 +308,109 @@
    "source": [
     "reference = \"Andersen, J. B., Sternberg, C., Poulsen, L. K., Bjørn, S. P., Givskov, M., & Molin, S. (1998). New unstable variants of green fluorescent protein for studies of transient gene expression in bacteria. Applied and environmental microbiology, 64(6), 2240-2246.\"\n",
     "\n",
+    "base = {\"Author\": \"Jacob Quinn Shenker\", \"Date\": workflow.date()}\n",
+    "\n",
     "oligo_base = {\n",
-    "    \"Author\": \"Jacob Quinn Shenker\",\n",
-    "    \"Date\": workflow.date(),\n",
+    "    **base,\n",
     "    \"Order date\": workflow.date(),\n",
     "    \"Vendor\": \"IDT\",\n",
     "    \"Type\": \"Primer\",\n",
-    "    \"Description\": description,\n",
+    "}\n",
+    "\n",
+    "part_base = {\n",
+    "    **base,\n",
+    "    \"Tags\": \"degradation clpxp sequestration\",\n",
     "    \"Reference\": reference,\n",
     "}\n",
     "\n",
-    "for enzyme_name, flipped, upstream in product(enzymes, (False, True), (False, True)):\n",
-    "    base = {}\n",
-    "    olt[olt.next_id()] = {\n",
-    "        **base,\n",
-    "        \"Name\": \"\",\n",
-    "        \"Sequence\": seq,\n",
-    "        \"Description\": description,\n",
+    "# apply = {\"Sequence\": workflow.normalize_seq}\n",
+    "apply = {\"Name\": None}\n",
+    "\n",
+    "for name, row in tags.items():\n",
+    "    # add BsaI flanks\n",
+    "    oligo_seq = (\n",
+    "        design.random_bases(num_random_bases)\n",
+    "        + sequence.reverse_complement(\n",
+    "            design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
+    "        )\n",
+    "        + row[\"Sequence\"]\n",
+    "        + design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
+    "    )\n",
+    "    oligo_seq = workflow.normalize_seq(oligo_seq)\n",
+    "    oligo_row = {**oligo_base, **row, \"Name\": name, \"Sequence\": oligo_seq}\n",
+    "    if workflow.DEGENERATE_BASES_REGEX.search(workflow.normalize_seq(row[\"Sequence\"])):\n",
+    "        # is library with degenerate bases, append library primer\n",
+    "        oligo_row[\"Sequence\"] = oligo_seq + library_primer_seq\n",
+    "        oligo_id = olib_oligos.upsert(oligo_row, apply=apply)\n",
+    "        usage = f\"{oligo_id}~,{library_primer}/{enzyme}\"\n",
+    "    else:\n",
+    "        # not library, just order two oligos to anneal\n",
+    "        # in this case, there's no reverse primer binding site,\n",
+    "        # so we need to add random bases to ensure efficient cutting\n",
+    "        oligo_seq = oligo_row[\"Sequence\"] + design.random_bases(num_random_bases)\n",
+    "        oligo_id = olib_oligos.upsert(\n",
+    "            {**oligo_row, \"Name\": f\"{name}_sense\", \"Sequence\": oligo_seq},\n",
+    "            apply=apply,\n",
+    "        )\n",
+    "        oligo_id2 = olib_oligos.upsert(\n",
+    "            {\n",
+    "                **oligo_row,\n",
+    "                \"Name\": f\"{name}_antisense\",\n",
+    "                \"Sequence\": str(sequence.reverse_complement(oligo_seq)),\n",
+    "            },\n",
+    "            apply=apply,\n",
+    "        )\n",
+    "        usage = f\"{oligo_id}={oligo_id2}/{enzyme}\"\n",
+    "    part_row = {\n",
+    "        **part_base,\n",
+    "        **row,\n",
+    "        \"Sequence\": workflow.normalize_seq(row[\"Sequence\"]),\n",
+    "        \"Usage\": usage,\n",
+    "        \"Type\": tag_part_type,\n",
+    "        \"Upstream overhang\": tag_overhangs[0],\n",
+    "        \"Downstream overhang\": tag_overhangs[1],\n",
+    "        \"Species/codon usage\": \"E. coli\",\n",
     "    }\n",
-    "    print(name, enzyme_name, flipped, unses)"
+    "    lib_parts[name] = part_row\n",
+    "    # lib_parts.upsert(part_row, apply=apply)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lib_parts.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "olib_oligos.local"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for key, val in olib_oligos.items():\n",
+    "    if \"Name\" not in val:\n",
+    "        print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(olib_oligos)"
    ]
   },
   {
@@ -464,34 +542,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: GC clamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "tm_binding = 60\n",
     "tm_homology = 55\n",
     "min_mfe = None\n",
     "homology = next(\n",
     "    primers.iter_primers(\n",
-    "        plasmid_seq_forward, min_tm=tm_homology, min_mfe=min_mfe, anchor_3prime=True\n",
+    "        plasmid_seq_forward,\n",
+    "        min_tm=tm_homology,\n",
+    "        min_mfe=min_mfe,\n",
+    "        anchor=\"3prime\",\n",
+    "        gc_clamp=False,\n",
     "    )\n",
     ")\n",
     "reverse_primer = next(\n",
     "    primers.iter_primers(\n",
-    "        plasmid_seq_forward,\n",
+    "        plasmid_seq_reverse,\n",
     "        min_tm=tm_binding,\n",
     "        min_length=len(homology),\n",
     "        min_mfe=min_mfe,\n",
-    "        anchor_3prime=True,\n",
+    "        anchor=\"5prime\",\n",
     "    )\n",
     ")\n",
-    "reverse_primer_seq = sequence.reverse_complement(reverse_primer.binding)\n",
+    "# reverse_primer_seq = sequence.reverse_complement(reverse_primer.binding)\n",
     "overhang = homology.binding + placeholder\n",
     "forward_primer = next(\n",
     "    primers.iter_primers(\n",
-    "        plasmid_seq_reverse,\n",
+    "        plasmid_seq_forward,\n",
     "        overhang=overhang,\n",
     "        min_tm=tm_binding,\n",
     "        min_mfe=min_mfe,\n",
-    "        anchor_3prime=True,\n",
+    "        anchor=\"5prime\",\n",
     "    )\n",
-    ")"
+    ")\n",
+    "\n",
+    "primer_pair = primers.PrimerPair(forward_primer, reverse_primer)"
    ]
   },
   {
@@ -500,7 +593,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "homology"
+    "primer_pair"
    ]
   },
   {
@@ -509,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reverse_primer"
+    "# primer oligos"
    ]
   },
   {
@@ -518,7 +611,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forward_primer"
+    "description = \"\"\n",
+    "\n",
+    "placeholder_oligo_base = {\n",
+    "    \"Author\": \"Jacob Quinn Shenker\",\n",
+    "    \"Date\": workflow.date(),\n",
+    "    \"Order date\": workflow.date(),\n",
+    "    \"Vendor\": \"IDT\",\n",
+    "    \"Type\": \"Primer\",\n",
+    "    \"Description\": description,\n",
+    "}\n",
+    "\n",
+    "for enzyme_name, flipped, upstream in product(enzymes, (False, True), (False, True)):\n",
+    "    base = {}\n",
+    "    olt[olt.next_id()] = {\n",
+    "        **base,\n",
+    "        \"Name\": \"\",\n",
+    "        \"Sequence\": seq,\n",
+    "        \"Description\": description,\n",
+    "    }\n",
+    "    print(name, enzyme_name, flipped, unses)"
    ]
   },
   {
@@ -527,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plasmid_seq_forward"
+    "olt.upsert()"
    ]
   },
   {
@@ -536,154 +648,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plasmid_seq_reverse[::-1][-20:]"
+    "# storage vector maps\n",
+    "# storage vector plasmid entry\n",
+    "# storage vector strain entry"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plasmid_seq_reverse.reverse_complement()[-20:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "next(\n",
-    "    primers.iter_primers(\n",
-    "        sequence.get_seq(plasmid_seq_forward), min_tm=65, anchor_3prime=True\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "part_seq[-10:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# find stop, extract CDS\n",
-    "# get storage plasmid sequence\n",
-    "# find CDS location on storage plasmid\n",
-    "# generate Tm>50 reverse primer abutting stop codon\n",
-    "# generate Tm>50 forward primer starting on stop codon\n",
-    "# extend forward primer to generate Tm>60-65 overhang\n",
-    "# add placeholder+overhang to reverse primer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# primers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# storage vectors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Iteration test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anchor = None  # \"start\"\n",
-    "reverse_inner = True\n",
-    "reverse_outer = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "length = 5\n",
-    "for start, stop in primers.iter_bounds(\n",
-    "    length,\n",
-    "    min_length=1,\n",
-    "    max_length=3,\n",
-    "    outer=\"start\",\n",
-    "    anchor=anchor,\n",
-    "    reverse_inner=reverse_inner,\n",
-    "    reverse_outer=reverse_outer,\n",
-    "):\n",
-    "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "length = 5\n",
-    "for start, stop in primers.iter_bounds(\n",
-    "    length,\n",
-    "    min_length=1,\n",
-    "    max_length=3,\n",
-    "    outer=\"stop\",\n",
-    "    anchor=anchor,\n",
-    "    reverse_inner=reverse_inner,\n",
-    "    reverse_outer=reverse_outer,\n",
-    "):\n",
-    "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "length = 5\n",
-    "for start, stop in primers.iter_bounds(\n",
-    "    length,\n",
-    "    min_length=1,\n",
-    "    max_length=3,\n",
-    "    outer=\"length\",\n",
-    "    anchor=anchor,\n",
-    "    reverse_inner=reverse_inner,\n",
-    "    reverse_outer=reverse_outer,\n",
-    "):\n",
-    "    print(\"|\" * start + \"*\" * (stop - start) + \"|\" * (length - stop))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
