[shenker/cloning] As used on 220127 to order deg tag inserts.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/220127 Deg tags.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/220127 Deg tags.ipynb
@@ -330,33 +330,39 @@
     "    # add BsaI flanks\n",
     "    oligo_seq = (\n",
     "        design.random_bases(num_random_bases)\n",
+    "        + design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
+    "        + row[\"Sequence\"]\n",
     "        + sequence.reverse_complement(\n",
     "            design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
     "        )\n",
-    "        + row[\"Sequence\"]\n",
-    "        + design.type2s_with_spacer(enzyme, len(tag_overhangs[0]))\n",
     "    )\n",
     "    oligo_seq = workflow.normalize_seq(oligo_seq)\n",
-    "    oligo_row = {**oligo_base, **row, \"Name\": name, \"Sequence\": oligo_seq}\n",
     "    if workflow.DEGENERATE_BASES_REGEX.search(workflow.normalize_seq(row[\"Sequence\"])):\n",
     "        # is library with degenerate bases, append library primer\n",
-    "        oligo_row[\"Sequence\"] = oligo_seq + library_primer_seq\n",
+    "        oligo_seq = oligo_seq + library_primer_seq\n",
+    "        oligo_row = {**oligo_base, **row, \"Name\": name, \"Sequence\": oligo_seq.upper()}\n",
     "        oligo_id = olib_oligos.upsert(oligo_row, apply=apply)\n",
     "        usage = f\"{oligo_id}~,{library_primer}/{enzyme}\"\n",
     "    else:\n",
     "        # not library, just order two oligos to anneal\n",
     "        # in this case, there's no reverse primer binding site,\n",
     "        # so we need to add random bases to ensure efficient cutting\n",
-    "        oligo_seq = oligo_row[\"Sequence\"] + design.random_bases(num_random_bases)\n",
+    "        oligo_seq = oligo_seq + design.random_bases(num_random_bases)\n",
     "        oligo_id = olib_oligos.upsert(\n",
-    "            {**oligo_row, \"Name\": f\"{name}_sense\", \"Sequence\": oligo_seq},\n",
+    "            {\n",
+    "                **oligo_base,\n",
+    "                **row,\n",
+    "                \"Name\": f\"{name}_sense\",\n",
+    "                \"Sequence\": oligo_seq.upper(),\n",
+    "            },\n",
     "            apply=apply,\n",
     "        )\n",
     "        oligo_id2 = olib_oligos.upsert(\n",
     "            {\n",
-    "                **oligo_row,\n",
+    "                **oligo_base,\n",
+    "                **row,\n",
     "                \"Name\": f\"{name}_antisense\",\n",
-    "                \"Sequence\": str(sequence.reverse_complement(oligo_seq)),\n",
+    "                \"Sequence\": str(sequence.reverse_complement(oligo_seq)).upper(),\n",
     "            },\n",
     "            apply=apply,\n",
     "        )\n",
@@ -390,27 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "olib_oligos.local"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for key, val in olib_oligos.items():\n",
-    "    if \"Name\" not in val:\n",
-    "        print(key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(olib_oligos)"
+    "olib_oligos.save()"
    ]
   },
   {
